{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 146,
  "lineage": "e2c2fe53-7277-5aab-be07-b899c6b6900c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0116d376ef7197b08",
            "association_id": "eipassoc-001b7b02a3240455b",
            "domain": "vpc",
            "id": "eipalloc-0116d376ef7197b08",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d1e96fbd80788519",
            "private_dns": "ip-10-0-0-254.ec2.internal",
            "private_ip": "10.0.0.254",
            "public_dns": "ec2-54-198-98-15.compute-1.amazonaws.com",
            "public_ip": "54.198.98.15",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "myya-eip"
            },
            "tags_all": {
              "Name": "myya-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09cf04b436c94d7f7",
            "arn": "arn:aws:ec2:us-east-1:782863115905:instance/i-0de5f03a251bd657d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0de5f03a251bd657d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyyaKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03965f2c80d94377c",
            "private_dns": "ip-10-0-0-189.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.189",
            "public_dns": "ec2-54-198-160-66.compute-1.amazonaws.com",
            "public_ip": "54.198.160.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b8b654a5da2ba248",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad82b031052b1ab2",
            "tags": {
              "Name": "terraform-myya-ec2"
            },
            "tags_all": {
              "Name": "terraform-myya-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08baa676e38b31f4b"
            ]
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu-linux-2004",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myya-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:internet-gateway/igw-0473d86e72af98bc1",
            "id": "igw-0473d86e72af98bc1",
            "owner_id": "782863115905",
            "tags": {
              "Name": "terraform-myya"
            },
            "tags_all": {
              "Name": "terraform-myya"
            },
            "vpc_id": "vpc-003a35a5d42b74484"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "myya-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0116d376ef7197b08",
            "connectivity_type": "public",
            "id": "nat-063e4adea347ea412",
            "network_interface_id": "eni-0d1e96fbd80788519",
            "private_ip": "10.0.0.254",
            "public_ip": "54.198.98.15",
            "subnet_id": "subnet-0ad82b031052b1ab2",
            "tags": {
              "Name": "myya-ngw"
            },
            "tags_all": {
              "Name": "myya-ngw"
            }
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myya-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:route-table/rtb-0cc168407de56a47f",
            "id": "rtb-0cc168407de56a47f",
            "owner_id": "782863115905",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-063e4adea347ea412",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-myya"
            },
            "tags_all": {
              "Name": "terraform-myya"
            },
            "timeouts": null,
            "vpc_id": "vpc-003a35a5d42b74484"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.myya-nat-gateway",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myya-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:route-table/rtb-0e592ed62f7d304f7",
            "id": "rtb-0e592ed62f7d304f7",
            "owner_id": "782863115905",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0473d86e72af98bc1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-myya"
            },
            "tags_all": {
              "Name": "terraform-myya"
            },
            "timeouts": null,
            "vpc_id": "vpc-003a35a5d42b74484"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myya-igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subenet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004585f618f535934",
            "route_table_id": "rtb-0cc168407de56a47f",
            "subnet_id": "subnet-0b31a665e056e1c1a"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.myya-nat-gateway",
            "aws_route_table.myya-private-route-table",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f920666899fa5896",
            "route_table_id": "rtb-0cc168407de56a47f",
            "subnet_id": "subnet-084373159ddc0ef97"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.myya-nat-gateway",
            "aws_route_table.myya-private-route-table",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3ad76e272555044",
            "route_table_id": "rtb-0e592ed62f7d304f7",
            "subnet_id": "subnet-0ad82b031052b1ab2"
          },
          "dependencies": [
            "aws_internet_gateway.myya-igw",
            "aws_route_table.myya-public-route-table",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adfe14b04629a3de",
            "route_table_id": "rtb-0e592ed62f7d304f7",
            "subnet_id": "subnet-0df6114e61a1621e4"
          },
          "dependencies": [
            "aws_internet_gateway.myya-igw",
            "aws_route_table.myya-public-route-table",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-0b31a665e056e1c1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b31a665e056e1c1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-myya-Private_Subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "terraform-myya-Private_Subnet-us-east-1a"
            },
            "vpc_id": "vpc-003a35a5d42b74484"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-084373159ddc0ef97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084373159ddc0ef97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-myya-Private_Subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "terraform-myya-Private_Subnet-us-east-1b"
            },
            "vpc_id": "vpc-003a35a5d42b74484"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-0ad82b031052b1ab2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad82b031052b1ab2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-myya-Public_Subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "terraform-myya-Public_Subnet-us-east-1a"
            },
            "vpc_id": "vpc-003a35a5d42b74484"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-0df6114e61a1621e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df6114e61a1621e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-myya-Public_Subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "terraform-myya-Public_Subnet-us-east-1b"
            },
            "vpc_id": "vpc-003a35a5d42b74484"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:vpc/vpc-003a35a5d42b74484",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f5f34bfb58e6958c",
            "default_route_table_id": "rtb-061d8754319bcff61",
            "default_security_group_id": "sg-08baa676e38b31f4b",
            "dhcp_options_id": "dopt-04b46d2964e3827c1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-003a35a5d42b74484",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-036122015957c3f8f",
            "ipv6_cidr_block": "2600:1f10:4f58:e300::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-061d8754319bcff61",
            "owner_id": "782863115905",
            "tags": {
              "Name": "terraform-myya-VPC"
            },
            "tags_all": {
              "Name": "terraform-myya-VPC"
            }
          }
        }
      ]
    }
  ]
}